--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,9 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <!-- Link the style sheet here -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us</title>
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
-<div>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: darkturquoise; height: 1in;">
     <div class="container-fluid">
       <h2 style="padding-right: 5%;">Dealerships</h2>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,44 +30,43 @@
     </div>
   </nav>
   
-    <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
-      <div class="banner" name="about-header">
-      <!-- Insert header information here -->
-      </div>
-      <div style="display: flex;flex-direction: row; margin:auto">
+  <div class="card" style="width: 80%; margin: auto; margin-top: 5%;">
+    <div class="banner" name="about-header">
+      <h1>About Us</h1>
+      <p>Welcome to Best Cars Dealership, your go-to destination for exceptional vehicles in North America. As a leading dealership with years of experience, we take pride in providing a wide selection of domestic and imported cars at competitive prices.</p>
+      <p>At Best Cars Dealership, customer satisfaction is our top priority. Our friendly and knowledgeable team is dedicated to assisting you in finding the perfect vehicle to suit your needs and preferences. Whether you're searching for a fuel-efficient sedan, a spacious SUV, or a rugged truck, we have the right car for you.</p>
+      <p>What sets us apart is our commitment to quality. Each vehicle in our inventory undergoes a rigorous inspection process to ensure that it meets our high standards of reliability and performance. When you shop with us, you can trust that you're getting a top-quality car that you can depend on.</p>
+    <div style="display: flex; flex-direction: row; margin: auto;">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person2.jpg" alt="Benjamin Rodriguez">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Benjamin Rodriguez</p>
+          <p>CEO</p>
+          <p class="card-text">Benjamin Rodriguez is an experienced professional in the automotive industry with a passion for providing excellent customer service and quality vehicles.</p>
+          <p>benjaminrodriguez@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person.jpg" alt="Ethan Nguyen">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Etan Guyen</p>
+          <p>Marketing Manager</p>
+          <p class="card-text">Ethan Guyen is a creative marketer with a knack for promoting our dealership's unique selling points and attracting customers.</p>
+          <p>ethanguyen@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person3.jpg" alt="Jacob Patel">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Jacob Patel</p>
+          <p>Sales Manager</p>
+          <p class="card-text">Jacob Patel is a skilled negotiator and sales manager who ensures that our customers find the perfect vehicle to suit their needs and budget.</p>
+          <p>jacobpatel@example.com</p>
         </div>
       </div>
     </div>
-    </div>
-    </div>
-    
-</div>
-
+  </div>
+</body>
 </html>
